# packet-groper

./: README.md  pyproject.toml
.ai/2026-01-03/: 143846-progress-log.md  145016-progress-log.md  153336-progress-log.md
.claude/commands/: progress.md
src/packet_groper/: __init__.py  __main__.py  cli.py  scanner.py
tests/: network_scan.md  run_tests.py
