[project]
name = "packet-groper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
packet-groper = "packet_groper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/packet_groper"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
